# Aegis-AI

./: .gitignore  Dockerfile  README.md  app.py  env.py  grader.py  helpers.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
extension/: content.js  highlight.css  manifest.json  popup.html  popup.js  styles.css
server/: app.py
