[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-ai"
version = "0.1.0"
description = "AegisAI Scam Defense Environment"
authors = [
    {name = "AegisAI"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.environments"]
scam-defense-env = "env:ScamDefenseEnv"

[project.entry-points."openenv.graders"]
easy_1 = "grader:compute_score"
easy_2 = "grader:compute_score"
easy_3 = "grader:compute_score"
medium_1 = "grader:compute_score"
medium_2 = "grader:compute_score"
medium_3 = "grader:compute_score"
hard_1 = "grader:compute_score"
hard_2 = "grader:compute_score"
hard_3 = "grader:compute_score"

[project.entry-points."openenv.tasks"]
easy_1 = "tasks:TASKS"
easy_2 = "tasks:TASKS"
easy_3 = "tasks:TASKS"
medium_1 = "tasks:TASKS"
medium_2 = "tasks:TASKS"
medium_3 = "tasks:TASKS"
hard_1 = "tasks:TASKS"
hard_2 = "tasks:TASKS"
hard_3 = "tasks:TASKS"
